err/domdiv.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/domdiv'...
Listing './lib/python3.5/site-packages/domdiv/card_db'...
Listing './lib/python3.5/site-packages/domdiv/card_db/cz'...
Listing './lib/python3.5/site-packages/domdiv/card_db/de'...
Listing './lib/python3.5/site-packages/domdiv/card_db/en_us'...
Listing './lib/python3.5/site-packages/domdiv/card_db/fr'...
Listing './lib/python3.5/site-packages/domdiv/card_db/it'...
Listing './lib/python3.5/site-packages/domdiv/card_db/nl_du'...
Listing './lib/python3.5/site-packages/domdiv/card_db/xx'...
Compiling './lib/python3.5/site-packages/domdiv/cards.py'...
***   File "./lib/python3.5/site-packages/domdiv/cards.py", line 176
    print 'warning, no set image for set "{}", card "{}"'.format(self.cardset, self.name)
                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/domdiv/fonts'...
Listing './lib/python3.5/site-packages/domdiv/images'...
Compiling './lib/python3.5/site-packages/domdiv/main.py'...
***   File "./lib/python3.5/site-packages/domdiv/main.py", line 500
    print 'Using custom paper size, %.2fcm x %.2fcm' % (
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/domdiv/tests'...
Listing './lib/python3.5/site-packages/domdiv-3.4.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/reportlab'...
Listing './lib/python3.5/site-packages/reportlab/.libs'...
Listing './lib/python3.5/site-packages/reportlab/fonts'...
Listing './lib/python3.5/site-packages/reportlab/graphics'...
Listing './lib/python3.5/site-packages/reportlab/graphics/barcode'...
Listing './lib/python3.5/site-packages/reportlab/graphics/charts'...
Listing './lib/python3.5/site-packages/reportlab/graphics/samples'...
Listing './lib/python3.5/site-packages/reportlab/graphics/widgets'...
Listing './lib/python3.5/site-packages/reportlab/lib'...
Listing './lib/python3.5/site-packages/reportlab/pdfbase'...
Listing './lib/python3.5/site-packages/reportlab/pdfgen'...
Listing './lib/python3.5/site-packages/reportlab/platypus'...
Listing './lib/python3.5/site-packages/reportlab-3.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
